--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,10 +19,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+  font_awesome_flutter: ^8.8.1
+  dio: ^3.0.9
+  intl: ">=0.16.1"
 
 dev_dependencies:
   flutter_test:
