--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   font_awesome_flutter: ^8.8.1
   dio: ^3.0.9
   intl: ">=0.16.1"
+  jiffy: ^3.0.1
 
 dev_dependencies:
   flutter_test:
