--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   intl: ">=0.16.1"
   jiffy: ^3.0.1
   charts_flutter: ^0.9.0
+  flutter_webview_plugin: ^0.3.11
 
 dev_dependencies:
   flutter_test:
