--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   jiffy: ^3.0.1
   charts_flutter: ^0.9.0
   flutter_webview_plugin: ^0.3.11
+  us_states: ^1.0.3
 
 dev_dependencies:
   flutter_test:
@@ -49,6 +50,8 @@ flutter:
   # assets:
   #  - images/a_dot_burr.jpeg
   #  - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
