--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   charts_flutter: ^0.9.0
   flutter_webview_plugin: ^0.3.11
   us_states: ^1.0.3
+  flutter_launcher_icons: ^0.7.4
 
 dev_dependencies:
   flutter_test:
@@ -78,3 +79,7 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+flutter_icons:
+  image_path_ios: 'assets/images/app_logo.png'
+  image_path_android: 'assets/images/app_logo.png'
+  ios: true
