--- a/ios/Flutter/Generated.xcconfig
+++ b/ios/Flutter/Generated.xcconfig
@@ -1,10 +1,11 @@
 // This is a generated file; do not edit or check into version control.
 FLUTTER_ROOT=/Users/poj/Documents/Flutter/flutter
 FLUTTER_APPLICATION_PATH=/Users/poj/Documents/Flutter/Projects/covid_19_tracker
-FLUTTER_TARGET=lib/main.dart
+FLUTTER_TARGET=/Users/poj/Documents/Flutter/Projects/covid_19_tracker/lib/main.dart
 FLUTTER_BUILD_DIR=build
 SYMROOT=${SOURCE_ROOT}/../build/ios
 OTHER_LDFLAGS=$(inherited) -framework Flutter
-FLUTTER_FRAMEWORK_DIR=/Users/poj/Documents/Flutter/flutter/bin/cache/artifacts/engine/ios-release
+FLUTTER_FRAMEWORK_DIR=/Users/poj/Documents/Flutter/flutter/bin/cache/artifacts/engine/ios
 FLUTTER_BUILD_NAME=1.0.0
 FLUTTER_BUILD_NUMBER=1
+TRACK_WIDGET_CREATION=true
