--- a/ios/Flutter/Generated.xcconfig
+++ b/ios/Flutter/Generated.xcconfig
@@ -1,11 +1,10 @@
 // This is a generated file; do not edit or check into version control.
-FLUTTER_ROOT=/Users/poj/Documents/Flutter/flutter
-FLUTTER_APPLICATION_PATH=/Users/poj/Documents/Flutter/Projects/covid_19_tracker
-FLUTTER_TARGET=/Users/poj/Documents/Flutter/Projects/covid_19_tracker/lib/main.dart
+FLUTTER_ROOT=D:\FlutterProjects\flutter
+FLUTTER_APPLICATION_PATH=D:\FlutterProjects\COVID_19_tracker
+FLUTTER_TARGET=lib\main.dart
 FLUTTER_BUILD_DIR=build
-SYMROOT=${SOURCE_ROOT}/../build/ios
+SYMROOT=${SOURCE_ROOT}/../build\ios
 OTHER_LDFLAGS=$(inherited) -framework Flutter
-FLUTTER_FRAMEWORK_DIR=/Users/poj/Documents/Flutter/flutter/bin/cache/artifacts/engine/ios
+FLUTTER_FRAMEWORK_DIR=D:\FlutterProjects\flutter\bin\cache\artifacts\engine\ios
 FLUTTER_BUILD_NAME=1.0.0
 FLUTTER_BUILD_NUMBER=1
-TRACK_WIDGET_CREATION=true
