--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   us_states: ^1.0.3
   flutter_launcher_icons: ^0.7.4
   auto_size_text: ^2.1.0
+  google_maps_flutter: ^1.0.3
 
 dev_dependencies:
   flutter_test:
